styling the navbar-logo

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,13 +1,12 @@
 .navbar {
     width: 100%;
-    background-color: aqua;
     display: flex;
 }
 .navbar-logo {
-    flex: 1;
+    flex: 2;
 }
 .navbar-list {
-    flex: 3;
+    flex: 2;
 }
 .navbar-list ul {
     display: flex;
@@ -15,15 +14,21 @@
     list-style-type: none;
     margin: 0;
     padding: 0;
-    background-color: aqua;
 }
 .navbar li a{
     display: block;
     text-align: center;
-    color: white;
+    color: black;
     padding: 16px;
     text-decoration: none;
 }
 .navbar li a:hover {
-    background-color: #111;
+    background-color: gray;
+    color: black;
+
+}
+.navbar-logo h1 {
+    margin-top: 15px;
+    margin-left: 50px;
+    color: black;
 }
