--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -1,32 +1,41 @@
 .home {
     width: 100%;
     height: 400px;
-    background-color: burlywood;
     display: flex;
 }
 .home-text {
     flex: 2;
-    background-color: chartreuse;
 }
 .home-text h1 {
-    margin-top: 50px;
+    margin-top: 70px;
     margin-left: 130px;
     font-family: Amaranth-Bold;
-    font-size: 40px;
+    font-size: 50px;
 }
 .home-text p {
     margin-left: 130px;
     font-family: Amaranth-Regular;
     margin-top: 5px;
+    font-size: 20px;
 }
 .home-text ul {
     margin-left: 130px;
     margin-top: 5px;
 }
 .home-text li {
-    margin-top: 4px;
+    margin-top: 8px;
     font-family: "PollyRounded-Light";
 }
 .home-image {
     flex: 2;
+}
+.home-social {
+    width: 270px;
+    height: 50px;
+    margin-top: 30px;
+    margin-left: 90px;
+}
+.home-social i {
+    margin-top: 25px;
+    margin-left: 40px;
 }
