--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -8,18 +8,18 @@
 }
 .home-text h1 {
     margin-top: 70px;
-    margin-left: 130px;
+    margin-left: 150px;
     font-family: Amaranth-Bold;
     font-size: 50px;
 }
 .home-text p {
-    margin-left: 130px;
+    margin-left: 150px;
     font-family: Amaranth-Regular;
     margin-top: 5px;
-    font-size: 20px;
+    font-size: 30px;
 }
 .home-text ul {
-    margin-left: 130px;
+    margin-left: 150px;
     margin-top: 5px;
 }
 .home-text li {
@@ -28,12 +28,13 @@
 }
 .home-image {
     flex: 2;
+    background-color: darkgoldenrod;
 }
 .home-social {
     width: 270px;
     height: 50px;
     margin-top: 30px;
-    margin-left: 90px;
+    margin-left: 110px;
 }
 .home-social i {
     margin-top: 25px;
