Modifing the border

--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -43,8 +43,8 @@
 .home-image img {
     width: 250px;
     height: 250px;
-    border: black solid 13px;
+    border: rgb(109, 109, 109) outset 15px;
     border-radius: 50%;
     margin-top: 40px;
-    margin-left: 70px;
+    margin-left: 150px;
 }
