--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -28,10 +28,9 @@
 }
 .home-image {
     flex: 2;
-    /* background-color: darkgoldenrod; */
 }
 .home-social {
-    width: 270px;
+    width: 300px;
     height: 50px;
     margin-top: 30px;
     margin-left: 110px;
@@ -39,6 +38,7 @@
 .home-social i {
     margin-top: 25px;
     margin-left: 40px;
+    color: black;
 }
 .home-image img {
     width: 250px;
