--- a/assets/css/about.css
+++ b/assets/css/about.css
@@ -1,5 +1,44 @@
 .about {
     width: 100%;
-    height: 500px;
-    background-color: mistyrose;
+    height: 600px;
+    /* background-color: mistyrose; */
+    display: flex;
+}
+.about-picture {
+    flex: 2;
+}
+.about-picture img {
+    width: 450px;
+    margin-left: 100px;
+    margin-top: 10px;
+}
+.about-text {
+    flex: 2;
+    margin-top: 60px;
+}
+.about-text h1 {
+    font-size: 30px;
+    font-family: Amaranth-Bold;
+}
+.about-text p {
+    margin-top: 20px;
+    width: 600px;
+    font-size: 18px;
+    font-family: PollyRounded-Light;
+}
+.about-text ul {
+    margin-top: 30px;
+    display: flex;
+    width: 400px;
+    height: 35px;
+    line-height: 22px;
+}
+.about-text li {
+    width: 100px;
+    border: orangered solid 2px;
+    text-align: center;
+    margin-left: 5px;
+    border-radius: 5px;
+    padding: 3px;
+    font-family: Amaranth-Regular;
 }
