--- a/assets/css/navbar.css
+++ b/assets/css/navbar.css
@@ -1,6 +1,9 @@
 .navbar {
     width: 100%;
     display: flex;
+    position: sticky;
+    top: 0;
+    background-color: white;
 }
 .navbar-logo {
     flex: 2;
