--- a/assets/css/do.css
+++ b/assets/css/do.css
@@ -1,45 +1,69 @@
 .do {
-    height: 500px;
+  height: 500px;
 }
 .do-card {
-    display: flex;
-    justify-content: center;
+  display: flex;
+  justify-content: center;
 }
 .do h1 {
-    text-align: center;
-    font-family: Amaranth-Bold;
-    font-size: 35px;
+  text-align: center;
+  font-family: Amaranth-Bold;
+  font-size: 35px;
 }
 .do-card .card {
-    width: 380px;
-    height: 280px;
-    margin-top: 30px;
-    margin-left: 10px;
-    background-color: white;
+  width: 380px;
+  height: 280px;
+  margin-top: 30px;
+  margin-left: 25px;
+  background-color: white;
 }
 .do-card .card h1 {
-    font-family: Amaranth-Bold;
-    margin-top: 30px;
+  font-family: Amaranth-Bold;
+  margin-top: 30px;
 }
 .do-card .card p {
-    width: 300px;
-    margin: 0 auto;
-    text-align: center;
-    margin-top: 15px;
-    font-family: PollyRounded-Light;
+  width: 300px;
+  margin: 0 auto;
+  text-align: center;
+  margin-top: 15px;
+  font-family: PollyRounded-Light;
 }
 .do-card .card i {
-    margin-top: 15px;
-    margin-left: 20px;
-    font-size: 30px;
-    font-weight: normal;
+  margin-top: 15px;
+  margin-left: 20px;
+  font-size: 30px;
+  font-weight: normal;
 }
 .do-card .card-01 i {
-    color: blueviolet;
+  color: blueviolet;
 }
 .do-card .card-02 i {
-    color: chocolate;
+  color: chocolate;
 }
 .do-card .card-03 i {
-    color: rgba(14, 66, 223, 0.644);
-} 
+  color: rgba(14, 66, 223, 0.644);
+}
+.card-01 {
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+  transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
+}
+
+.card-01:hover {
+  box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
+}
+.card-02 {
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+  transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
+}
+
+.card-02:hover {
+  box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
+}
+.card-03 {
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+  transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
+}
+
+.card-03:hover {
+  box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
+}
