--- a/assets/css/skill.css
+++ b/assets/css/skill.css
@@ -5,7 +5,6 @@
 }
 .skill-technical {
     flex: 2;
-    background-color: sandybrown;
 }
 .skill-professional {
     flex: 2;
@@ -21,12 +20,12 @@
 .myjavascript {
     width: 75%;
     background-color: lightgray;
-    margin-left: 20px;
+    margin-left: 30px;
     border-radius: 10px;
     margin-top: 8px;
 }
 .javascript {
-    width: 20%;
+    width: 75%;
     height: 12px;
     background-color: red;
     text-align: center;
@@ -36,7 +35,75 @@
     padding: 2px;
 }
 .skill p {
-    margin-left: 20px;
+    margin-left: 35px;
     font-family: Amaranth-Regular;
-    margin-top: 20px;
+    margin-top: 25px;
+}
+.myhtml {
+    width: 75%;
+    background-color: lightgray;
+    margin-left: 30px;
+    border-radius: 10px;
+    margin-top: 8px;
+}
+.html {
+    width: 95%;
+    height: 12px;
+    background-color: red;
+    text-align: center;
+    color: white;
+    font-size: 12px;
+    border-radius: 10px;
+    padding: 2px;
+}
+.mycss {
+    width: 75%;
+    background-color: lightgray;
+    margin-left: 30px;
+    border-radius: 10px;
+    margin-top: 8px;
+}
+.css {
+    width: 85%;
+    height: 12px;
+    background-color: red;
+    text-align: center;
+    color: white;
+    font-size: 12px;
+    border-radius: 10px;
+    padding: 2px;
+}
+.myangular {
+    width: 75%;
+    background-color: lightgray;
+    margin-left: 30px;
+    border-radius: 10px;
+    margin-top: 8px;
+}
+.angular {
+    width: 45%;
+    height: 12px;
+    background-color: red;
+    text-align: center;
+    color: white;
+    font-size: 12px;
+    border-radius: 10px;
+    padding: 2px;
+}
+.mysql {
+    width: 75%;
+    background-color: lightgray;
+    margin-left: 30px;
+    border-radius: 10px;
+    margin-top: 8px;
+}
+.sql {
+    width: 40%;
+    height: 12px;
+    background-color: red;
+    text-align: center;
+    color: white;
+    font-size: 12px;
+    border-radius: 10px;
+    padding: 2px;
 }
