--- a/assets/css/skill.css
+++ b/assets/css/skill.css
@@ -16,6 +16,8 @@
 }
 .skill-professional h1 {
     text-align: center;
+    font-family: Amaranth-Bold;
+    font-size: 30px;
 }
 .myjavascript {
     width: 75%;
@@ -99,6 +101,24 @@
 }
 .sql {
     width: 40%;
+    height: 12px;
+    background-color: red;
+    text-align: center;
+    color: white;
+    font-size: 12px;
+    border-radius: 10px;
+    padding: 2px;
+}
+
+.mycomm {
+    width: 75%;
+    background-color: lightgray;
+    margin-left: 30px;
+    border-radius: 10px;
+    margin-top: 8px;
+}
+.comm {
+    width: 95%;
     height: 12px;
     background-color: red;
     text-align: center;
