--- a/assets/css/skill.css
+++ b/assets/css/skill.css
@@ -120,7 +120,7 @@
 .comm {
     width: 95%;
     height: 12px;
-    background-color: red;
+    background-color: tomato;
     text-align: center;
     color: white;
     font-size: 12px;
@@ -135,9 +135,9 @@
     margin-top: 8px;
 }
 .work {
-    width: 95%;
+    width: 75%;
     height: 12px;
-    background-color: red;
+    background-color: tomato;
     text-align: center;
     color: white;
     font-size: 12px;
@@ -152,9 +152,9 @@
     margin-top: 8px;
 }
 .manage {
-    width: 95%;
+    width: 85%;
     height: 12px;
-    background-color: red;
+    background-color: tomato;
     text-align: center;
     color: white;
     font-size: 12px;
@@ -169,9 +169,9 @@
     margin-top: 8px;
 }
 .create {
-    width: 95%;
+    width: 75%;
     height: 12px;
-    background-color: red;
+    background-color: tomato;
     text-align: center;
     color: white;
     font-size: 12px;
