styling the cards in the experience section

--- a/assets/css/experience.css
+++ b/assets/css/experience.css
@@ -1,6 +1,5 @@
 .experience {
-    height: 500px;
-    background-color: mistyrose;
+    height: 1000px;
     display: flex;
 }
 .experience-education {
@@ -8,10 +7,27 @@
     text-align: center;
     font-family: Amaranth-Bold;
     font-size: 30px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 .experience-work {
     flex: 2;
     text-align: center ;
     font-family: Amaranth-Bold;
     font-size: 30px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.card {
+    width: 450px;
+    height: 250px;
+    background-color: white;
+    margin-top: 20px;
+    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+  transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1)
+}
+.card:hover {
+    box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
 }
