adding and styling card 01

--- a/assets/css/experience.css
+++ b/assets/css/experience.css
@@ -30,4 +30,24 @@
 }
 .card:hover {
     box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
+}.card-01 h1 {
+    font-family: PollyRounded-Bold;
+    font-size: 20px;
+    margin-top: 50px;
 }
+.card-01 h2 {
+    font-family: Amaranth-Bold;
+    margin-top: 10px;
+    font-size: 35px;
+}
+.card-01 h3 {
+    font-family: Amaranth-BoldItalic;
+    margin-top: 10px;
+    font-size: 20px;
+}
+.card-01 p {
+    font-family: PollyRounded-Thin;
+    margin-top: 10px;
+    font-size: 20px;
+}
+
