--- a/assets/css/experience.css
+++ b/assets/css/experience.css
@@ -31,43 +31,43 @@
 .card:hover {
     box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
 }
-.card-01 h1 {
+.experience-education .card-01 h1 {
     font-family: PollyRounded-Bold;
     font-size: 20px;
     margin-top: 50px;
 }
-.card-01 h2 {
+.experience-education .card-01 h2 {
     font-family: Amaranth-Bold;
     margin-top: 10px;
     font-size: 35px;
 }
-.card-01 h3 {
+.experience-education .card-01 h3 {
     font-family: Amaranth-BoldItalic;
     margin-top: 10px;
     font-size: 20px;
 }
-.card-01 p {
+.experience-education .card-01 p {
     font-family: PollyRounded-Thin;
     margin-top: 10px;
     font-size: 20px;
 }
 
-.card-02 h1 {
+.experience-education .card-02 h1 {
     font-family: PollyRounded-Bold;
     font-size: 20px;
     margin-top: 50px;
 }
-.card-02 h2 {
+.experience-education .card-02 h2 {
     font-family: Amaranth-Bold;
     margin-top: 10px;
     font-size: 35px;
 }
-.card-02 h3 {
+.experience-education .card-02 h3 {
     font-family: Amaranth-BoldItalic;
     margin-top: 10px;
     font-size: 20px;
 }
-.card-02 p {
+.experience-education .card-02 p {
     font-family: PollyRounded-Thin;
     margin-top: 10px;
     font-size: 20px;
