--- a/assets/css/do.css
+++ b/assets/css/do.css
@@ -24,7 +24,7 @@
 .do-card .card p {
   width: 300px;
   margin: 0 auto;
-  text-align: center;
+  text-align: left;
   margin-top: 15px;
   font-family: PollyRounded-Light;
 }
