--- a/assets/css/project.css
+++ b/assets/css/project.css
@@ -1,4 +1,40 @@
 .project {
     height: 500px;
     background-color: mistyrose;
+    position: relative;
 }
+* {
+    box-sizing: border-box;
+}
+.project-slides {
+    display: none;
+    padding: 80px;
+    text-align: center;
+}
+.prev, .next {
+    cursor: pointer;
+    position: absolute;
+    top: 50%;
+    width: auto;
+    margin-top: -30px;
+    padding: 16px;
+    color: #888888;
+    font-weight: bold;
+    font-size: 20px;
+    border-radius: 0 3px 3px 0;
+    user-select: none;
+}
+.next {
+    position: relative;
+    right: 0;
+    border-radius: 3px 0 0 3px;
+}
+.prev:hover, .next:hover {
+    background-color: rgba(0, 0, 0, 8);
+    color: white;
+}
+/* .dot-container {
+    text-align: center;
+    padding: 20px;
+    background-color: #dddddd;
+} */
