--- a/assets/css/project.css
+++ b/assets/css/project.css
@@ -33,8 +33,21 @@
     background-color: rgba(0, 0, 0, 8);
     color: white;
 }
-/* .dot-container {
+.dot-container {
     text-align: center;
     padding: 20px;
     background-color: #dddddd;
-} */
+}
+.dot {
+    cursor: pointer;
+    height: 15px;
+    width: 15px;
+    margin: 0 2px;
+    background-color: #bbbbbb;
+    border-radius: 50%;
+    display: inline-block;
+    transition: background-color 0.6s ease;
+}
+.active, .dot:hover {
+    background-color: #171717;
+}
