--- a/assets/css/project.css
+++ b/assets/css/project.css
@@ -2,6 +2,8 @@
   height: 500px;
   background-color: mistyrose;
 }
+
+/* projecr01 */
 .project01 {
   display: flex;
 }
@@ -52,6 +54,62 @@
   box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24),0 17px 50px 0 rgba(0,0,0,0.19);
 }
 .project01-link a {
+  text-decoration: none;
+  font-size: 15px;
+  color: white;
+}
+
+/* projecr02 */
+.project02 {
+  display: flex;
+}
+.project02-image {
+  flex: 2;
+  margin-top: 100px;
+  margin-left: 150px; 
+}
+.project02-image img {
+  border-radius: 10px;
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.5), 0 1px 2px rgba(0, 0, 0, 0.5);
+  transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
+}
+.project02-image img:hover {
+  box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
+}
+.project02-text {
+  flex: 2;
+  margin-top: 190px;
+  font-size: 30px;
+  font-family: Amaranth-Bold;
+}
+.project02-text p {
+  font-size: 15px;
+  font-family: PollyRounded-Light;
+  width: 400px;
+  margin-top: 5px;
+}
+.project02-text h2 {
+  font-size: 15px;
+  font-family: Amaranth-Regular;
+  margin-top: 10px;
+}
+.project02-link {
+  margin-top: 20px;
+  background-color: red;
+  width: 130px;
+  height: 40px;
+  text-align: center;
+  padding: 2px;
+  border-radius: 25px;
+  border: none;
+  cursor: pointer;
+  -webkit-transition-duration: 0.4s; /* Safari */
+    transition-duration: 0.4s;
+}
+.project02-link:hover {
+  box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24),0 17px 50px 0 rgba(0,0,0,0.19);
+}
+.project02-link a {
   text-decoration: none;
   font-size: 15px;
   color: white;
