--- a/assets/css/project.css
+++ b/assets/css/project.css
@@ -1,16 +1,50 @@
+* {
+  box-sizing: border-box;
+}
+body {
+  margin: 0;
+}
 .project {
   /* height: 500px; */
-  background-color: mistyrose;
+  /* background-color: mistyrose; */
+  position: relative;
+}
+.mySlides {
+  display: none;
+  padding: 80px;
+  text-align: center;
+}
+.prev, .next {
+  cursor: pointer;
+  position: absolute;
+  top: 50%;
+  width: auto;
+  margin-top: -30px;
+  padding: 16px;
+  color: #888;
+  font-weight: bold;
+  font-size: 20px;
+  border-radius: 0 3px 3px 0;
+  user-select: none;
+}
+.next {
+  position: absolute;
+  right: 0;
+  border-radius: 3px 0 0 3px;
+}
+.prev:hover, .next:hover {
+  background-color: rgba(0,0,0,0.8);
+  color: white;
 }
 
 /* projecr01 */
 .project01 {
-  display: flex;
+  /* display: flex; */
 }
 .project01-image {
   flex: 2;
-  margin-top: 100px;
-  margin-left: 150px; 
+  /* margin-top: 100px; */
+  /* margin-left: 150px;  */
 }
 .project01-image img {
   border-radius: 10px;
@@ -22,14 +56,14 @@
 }
 .project01-text {
   flex: 2;
-  margin-top: 190px;
+  /* margin-top: 190px; */
   font-size: 30px;
   font-family: Amaranth-Bold;
 }
 .project01-text p {
   font-size: 15px;
   font-family: PollyRounded-Light;
-  width: 400px;
+  /* width: 400px; */
   margin-top: 5px;
 }
 .project01-text h2 {
@@ -41,7 +75,7 @@
   margin-top: 20px;
   background-color: red;
   width: 130px;
-  height: 40px;
+  height: 45px;
   text-align: center;
   padding: 2px;
   border-radius: 25px;
@@ -49,6 +83,7 @@
   cursor: pointer;
   -webkit-transition-duration: 0.4s; /* Safari */
     transition-duration: 0.4s;
+    margin-left: 570px;
 }
 .project01-link:hover {
   box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24),0 17px 50px 0 rgba(0,0,0,0.19);
@@ -61,12 +96,12 @@
 
 /* projecr02 */
 .project02 {
-  display: flex;
+  /* display: flex; */
 }
 .project02-image {
   flex: 2;
-  margin-top: 100px;
-  margin-left: 150px; 
+  /* margin-top: 100px; */
+  /* margin-left: 150px;  */
 }
 .project02-image img {
   border-radius: 10px;
@@ -78,14 +113,14 @@
 }
 .project02-text {
   flex: 2;
-  margin-top: 190px;
+  /* margin-top: 190px; */
   font-size: 30px;
   font-family: Amaranth-Bold;
 }
 .project02-text p {
   font-size: 15px;
   font-family: PollyRounded-Light;
-  width: 400px;
+  /* width: 400px; */
   margin-top: 5px;
 }
 .project02-text h2 {
@@ -97,7 +132,7 @@
   margin-top: 20px;
   background-color: red;
   width: 130px;
-  height: 40px;
+  height: 45px;
   text-align: center;
   padding: 2px;
   border-radius: 25px;
@@ -105,6 +140,7 @@
   cursor: pointer;
   -webkit-transition-duration: 0.4s; /* Safari */
     transition-duration: 0.4s;
+    margin-left: 570px;
 }
 .project02-link:hover {
   box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24),0 17px 50px 0 rgba(0,0,0,0.19);
@@ -118,12 +154,12 @@
 
 /* projecr03 */
 .project03 {
-  display: flex;
+  /* display: flex; */
 }
 .project03-image {
   flex: 2;
-  margin-top: 100px;
-  margin-left: 150px; 
+  /* margin-top: 100px; */
+  /* margin-left: 150px;  */
 }
 .project03-image img {
   border-radius: 10px;
@@ -135,14 +171,14 @@
 }
 .project03-text {
   flex: 2;
-  margin-top: 190px;
+  /* margin-top: 190px; */
   font-size: 30px;
   font-family: Amaranth-Bold;
 }
 .project03-text p {
   font-size: 15px;
   font-family: PollyRounded-Light;
-  width: 400px;
+  /* width: 400px; */
   margin-top: 5px;
 }
 .project03-text h2 {
@@ -154,7 +190,7 @@
   margin-top: 20px;
   background-color: red;
   width: 130px;
-  height: 40px;
+  height: 45px;
   text-align: center;
   padding: 2px;
   border-radius: 25px;
@@ -162,6 +198,7 @@
   cursor: pointer;
   -webkit-transition-duration: 0.4s; /* Safari */
     transition-duration: 0.4s;
+    margin-left: 570px;
 }
 .project03-link:hover {
   box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24),0 17px 50px 0 rgba(0,0,0,0.19);
