--- a/assets/css/gallery.css
+++ b/assets/css/gallery.css
@@ -1,6 +1,6 @@
 * {box-sizing: border-box;}
 body {font-family: Verdana, sans-serif;}
-.mySlides {display: none;}
+.mySlide {display: none;}
 img {vertical-align: middle;}
 
 /* Slideshow container */
