--- a/assets/css/contact.css
+++ b/assets/css/contact.css
@@ -1,8 +1,8 @@
 .contact {
     height: 200px;
-    background-color: mistyrose;
     display: flex;
     justify-content: space-around;
+    background-color: whitesmoke;
 }
 .contant-text {
     display: flex;
@@ -10,4 +10,19 @@
 }
 .contant-text h1 {
     font-family: PollyRounded-Light;
+}
+.contact-hire {
+    display: flex;
+    align-items: center;
+    background-color: orangered;
+    width: 310px;
+    height: 50px;
+    margin-top: 100px;
+}
+.contact-hire a {
+    text-decoration: none;
+    margin-left: 20px;
+    padding: 5px;
+    color: #ffffff;
+    font-family: Amaranth-Regular;
 }
