--- a/assets/css/navbar.css
+++ b/assets/css/navbar.css
@@ -1,3 +1,6 @@
+body {
+    scroll-behavior: smooth;
+}
 .navbar {
     width: 100%;
     display: flex;
@@ -41,3 +44,24 @@
 .navbar-logo h1:hover {
     color: red;
 }
+/* width */
+body::-webkit-scrollbar {
+    width: 10px;
+  }
+  
+  /* Track */
+body::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 5px #17141d; 
+    border-radius: 10px;
+  }
+   
+  /* Handle */
+body::-webkit-scrollbar-thumb {
+    background: burlywood; 
+    border-radius: 10px;
+  }
+  
+  /* Handle on hover */
+body::-webkit-scrollbar-thumb:hover {
+    background: red; 
+  }
