--- a/assets/css/gallery.css
+++ b/assets/css/gallery.css
@@ -13,6 +13,9 @@ img {vertical-align: middle;}
     margin-left: 90px;
     height: 450px;
     width: 200px;
+    border-radius: 10px;
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.5), 0 1px 2px rgba(0, 0, 0, 0.5);
+  transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
 }
 
 /* Caption text */
