--- a/assets/css/experience.css
+++ b/assets/css/experience.css
@@ -9,7 +9,14 @@
     font-size: 30px;
     display: flex;
     flex-direction: column;
-    align-items: center;
+    align-items: flex-end;
+    margin-right: 10px;
+}
+.experience-education h4 {
+    margin-right: 180px;
+}
+.experience-work h4 {
+    margin-left: 140px;
 }
 .experience-work {
     flex: 2;
@@ -18,7 +25,8 @@
     font-size: 30px;
     display: flex;
     flex-direction: column;
-    align-items: center;
+    align-items: flex-start;
+    margin-left: 10px;
 }
 .card {
     width: 480px;
