--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -40,15 +40,30 @@
     flex: 2;
 }
 .home-social {
-    width: 300px;
-    height: 50px;
+    width: 350px;
+    height: 90px;
     margin-top: 30px;
     margin-left: 110px;
+    border-radius: 4px;
+    padding: 10px;
+    box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
+		position: relative;
 }
 .home-social i {
     margin-top: 25px;
     margin-left: 40px;
     color: black;
+}
+i.material-icons {
+    font-size: 1.5rem;
+    color: white;
+    position: relative;
+    border-radius: 50%;
+    padding: 5px;
+    margin: 3px;
+    margin-left: 20px;
+    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+    transition: color 0.2s ease, background-color 0.2s ease, transform 0.3s ease;
 }
 .home-social i:hover {
     color: red;
@@ -60,4 +75,125 @@
     border-radius: 50%;
     margin-top: 90px;
     margin-left: 150px;
+}
+
+i.material-icons:after {
+    content: "";
+    width: 100%;
+    height: 100%;
+    border: solid 2px;
+    transform: scale(1);
+    position: absolute;
+    top: -2px;
+    left: -2px;
+    border-radius: 50%;
+    transition: all 0.3s ease;
+}
+
+i.material-icons:hover:after {
+    transform: scale(1);
+    box-shadow: 10px 0 20px rgba(0, 0, 0, 0.19), 6px 0 6px rgba(0, 0, 0, 0.23);
+}
+
+i.material-icons:nth-of-type(4) {
+    background-color: #88b999;
+}
+
+i.material-icons:nth-of-type(4):hover {
+    color: #88b999;
+}
+
+i.material-icons:nth-of-type(4):after {
+    border-color: #88b999;
+}
+
+i.material-icons:nth-of-type(5) {
+    background-color: #88b2b9;
+}
+
+i.material-icons:nth-of-type(5):hover {
+    color: #88b2b9;
+}
+
+i.material-icons:nth-of-type(5):after {
+    border-color: #88b2b9;
+}
+
+i.material-icons:nth-of-type(6) {
+    background-color: #8897b9;
+}
+
+i.material-icons:nth-of-type(6):hover {
+    color: #8897b9;
+}
+
+i.material-icons:nth-of-type(6):after {
+    border-color: #8897b9;
+}
+
+i.material-icons:nth-of-type(7) {
+    background-color: #af88b9;
+}
+
+i.material-icons:nth-of-type(7):hover {
+    color: #af88b9;
+}
+
+i.material-icons:nth-of-type(7):after {
+    border-color: #af88b9;
+}
+
+i.material-icons:nth-of-type(8) {
+    background-color: #d59acb;
+}
+
+i.material-icons:nth-of-type(8):hover {
+    color: #d59acb;
+}
+
+i.material-icons:nth-of-type(8):after {
+    border-color: #d59acb;
+}
+
+i.material-icons:nth-of-type(1) {
+    background-color: black;
+}
+
+i.material-icons:nth-of-type(1):hover {
+    color: black;
+}
+
+i.material-icons:nth-of-type(1):after {
+    border-color: black;
+}
+
+i.material-icons:nth-of-type(2) {
+    background-color: black;
+}
+
+i.material-icons:nth-of-type(2):hover {
+    color: black;
+}
+
+i.material-icons:nth-of-type(2):after {
+    border-color: black;
+}
+
+i.material-icons:nth-of-type(3) {
+    background-color: black;
+}
+
+i.material-icons:nth-of-type(3):hover {
+    color: black;
+}
+
+i.material-icons:nth-of-type(3):after {
+    border-color: black;
+}
+
+i.material-icons:hover {
+    background-color: transparent;
+    transform: rotate(720deg);
+    cursor: pointer;
+    box-shadow: none;
 }
