--- a/assets/css/experience.css
+++ b/assets/css/experience.css
@@ -1,6 +1,9 @@
 .experience {
     height: 750px;
     display: flex;
+    background-color: #fbfaff;
+background-image: url("https://www.transparenttextures.com/patterns/asfalt-dark.png");
+/* This is mostly intended for prototyping; please download the pattern and re-host for production environments. Thank you! */
 }
 .experience-education {
     flex: 2;
