--- a/assets/css/project.css
+++ b/assets/css/project.css
@@ -8,6 +8,9 @@ body {
   /* height: 500px; */
   /* background-color: mistyrose; */
   position: relative;
+  background-color: #fbfaff;
+background-image: url("https://www.transparenttextures.com/patterns/asfalt-dark.png");
+/* This is mostly intended for prototyping; please download the pattern and re-host for production environments. Thank you! */
 }
 .mySlides {
   display: none;
