--- a/assets/css/contact.css
+++ b/assets/css/contact.css
@@ -1,8 +1,10 @@
 .contact {
-    height: 200px;
+    height: 400px;
     display: flex;
     justify-content: space-around;
-    background-color: whitesmoke;
+    background-color: #fbfaff;
+background-image: url("https://www.transparenttextures.com/patterns/asfalt-dark.png");
+/* This is mostly intended for prototyping; please download the pattern and re-host for production environments. Thank you! */
 }
 .contant-text {
     display: flex;
@@ -17,7 +19,7 @@
     background-color: orangered;
     width: 310px;
     height: 50px;
-    margin-top: 100px;
+    margin-top: 280px;
 }
 .contact-hire a {
     text-decoration: none;
