--- a/assets/css/gallery.css
+++ b/assets/css/gallery.css
@@ -8,11 +8,13 @@ img {vertical-align: middle;}
   max-width: 1000px;
   position: relative;
   margin: auto;
+  height: 620px;
 }
 .mySlide img {
     margin-left: 90px;
+    margin-top: 90px;
     height: 450px;
-    width: 200px;
+    width: 100%;
     border-radius: 10px;
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.5), 0 1px 2px rgba(0, 0, 0, 0.5);
   transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
