--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -13,6 +13,7 @@ background-image: url("https://www.transparenttextures.com/patterns/asfalt-dark.
     margin-top: 130px;
     margin-left: 150px;
     font-family: Amaranth-Regular;
+    color: #fff;
     font-size: 25px;
     background-color: red;
     padding: 10px;
