--- a/assets/css/gallery.css
+++ b/assets/css/gallery.css
@@ -1,7 +1,15 @@
-* {box-sizing: border-box;}
-body {font-family: Verdana, sans-serif;}
-.mySlide {display: none;}
-img {vertical-align: middle;}
+* {
+  box-sizing: border-box;
+}
+body {
+  font-family: Verdana, sans-serif;
+}
+.mySlide {
+  display: none;
+}
+img {
+  vertical-align: middle;
+}
 
 /* Slideshow container */
 .slideshow-container {
@@ -11,11 +19,11 @@ img {vertical-align: middle;}
   height: 620px;
 }
 .mySlide img {
-    margin-left: 90px;
-    margin-top: 90px;
-    height: 450px;
-    width: 100%;
-    border-radius: 10px;
+  margin-left: 90px;
+  margin-top: 90px;
+  height: 450px;
+  width: 100%;
+  border-radius: 10px;
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.5), 0 1px 2px rgba(0, 0, 0, 0.5);
   transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
 }
@@ -64,16 +72,26 @@ img {vertical-align: middle;}
 }
 
 @-webkit-keyframes fade {
-  from {opacity: .4} 
-  to {opacity: 1}
+  from {
+    opacity: 0.4;
+  }
+  to {
+    opacity: 1;
+  }
 }
 
 @keyframes fade {
-  from {opacity: .4} 
-  to {opacity: 1}
+  from {
+    opacity: 0.4;
+  }
+  to {
+    opacity: 1;
+  }
 }
 
 /* On smaller screens, decrease text size */
 @media only screen and (max-width: 300px) {
-  .text {font-size: 11px}
+  .text {
+    font-size: 11px;
+  }
 }
