--- a/assets/css/navbar.css
+++ b/assets/css/navbar.css
@@ -1,67 +1,68 @@
-body,html {
-    scroll-behavior: smooth;
+body,
+html {
+  scroll-behavior: smooth;
 }
 .navbar {
-    width: 100%;
-    display: flex;
-    position: sticky;
-    top: 0;
-    background-color: white;
+  width: 100%;
+  display: flex;
+  position: sticky;
+  top: 0;
+  background-color: white;
 }
 .navbar-logo {
-    flex: 2;
+  flex: 2;
 }
 .navbar-list {
-    flex: 2;
+  flex: 2;
 }
 .navbar-list ul {
-    display: flex;
-    justify-content: center;
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
+  display: flex;
+  justify-content: center;
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
 }
-.navbar li a{
-    display: block;
-    text-align: center;
-    color: black;
-    padding: 16px;
-    text-decoration: none;
-    font-family: Amaranth-Regular;
-    border-bottom: transparent solid 1px;
-    transition: ease-in 0.3s;
+.navbar li a {
+  display: block;
+  text-align: center;
+  color: black;
+  padding: 16px;
+  text-decoration: none;
+  font-family: Amaranth-Regular;
+  border-bottom: transparent solid 1px;
+  transition: ease-in 0.3s;
 }
 .navbar li a:hover {
-    border-bottom: black solid 1px;
-    color: red;
+  border-bottom: black solid 1px;
+  color: red;
 }
 .navbar-logo h1 {
-    margin-top: 15px;
-    margin-left: 50px;
-    color: black;
-    font-family: Amaranth-Bold;
+  margin-top: 15px;
+  margin-left: 50px;
+  color: black;
+  font-family: Amaranth-Bold;
 }
 .navbar-logo h1:hover {
-    color: red;
+  color: red;
 }
 /* width */
 body::-webkit-scrollbar {
-    width: 10px;
-  }
-  
-  /* Track */
+  width: 10px;
+}
+
+/* Track */
 body::-webkit-scrollbar-track {
-    box-shadow: inset 0 0 5px #17141d; 
-    border-radius: 10px;
-  }
-   
-  /* Handle */
+  box-shadow: inset 0 0 5px #17141d;
+  border-radius: 10px;
+}
+
+/* Handle */
 body::-webkit-scrollbar-thumb {
-    background: burlywood; 
-    border-radius: 10px;
-  }
-  
-  /* Handle on hover */
+  background: burlywood;
+  border-radius: 10px;
+}
+
+/* Handle on hover */
 body::-webkit-scrollbar-thumb:hover {
-    background: red; 
-  }
+  background: red;
+}
