--- a/assets/css/project.css
+++ b/assets/css/project.css
@@ -9,15 +9,16 @@ body {
   /* background-color: mistyrose; */
   position: relative;
   background-color: #fbfaff;
-background-image: url("https://www.transparenttextures.com/patterns/asfalt-dark.png");
-/* This is mostly intended for prototyping; please download the pattern and re-host for production environments. Thank you! */
+  background-image: url("https://www.transparenttextures.com/patterns/asfalt-dark.png");
+  /* This is mostly intended for prototyping; please download the pattern and re-host for production environments. Thank you! */
 }
 .mySlides {
   display: none;
   padding: 80px;
   text-align: center;
 }
-.prev, .next {
+.prev,
+.next {
   cursor: pointer;
   position: absolute;
   top: 50%;
@@ -35,8 +36,9 @@ background-image: url("https://www.transparenttextures.com/patterns/asfalt-dark.
   right: 0;
   border-radius: 3px 0 0 3px;
 }
-.prev:hover, .next:hover {
-  background-color: rgba(0,0,0,0.8);
+.prev:hover,
+.next:hover {
+  background-color: rgba(0, 0, 0, 0.8);
   color: white;
 }
 
@@ -83,11 +85,12 @@ background-image: url("https://www.transparenttextures.com/patterns/asfalt-dark.
   border: none;
   cursor: pointer;
   -webkit-transition-duration: 0.4s; /* Safari */
-    transition-duration: 0.4s;
-    margin-left: 570px;
+  transition-duration: 0.4s;
+  margin-left: 570px;
 }
 .project01-link:hover {
-  box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24),0 17px 50px 0 rgba(0,0,0,0.19);
+  box-shadow: 0 12px 16px 0 rgba(0, 0, 0, 0.24),
+    0 17px 50px 0 rgba(0, 0, 0, 0.19);
 }
 .project01-link a {
   text-decoration: none;
@@ -138,18 +141,18 @@ background-image: url("https://www.transparenttextures.com/patterns/asfalt-dark.
   border: none;
   cursor: pointer;
   -webkit-transition-duration: 0.4s; /* Safari */
-    transition-duration: 0.4s;
-    margin-left: 570px;
+  transition-duration: 0.4s;
+  margin-left: 570px;
 }
 .project02-link:hover {
-  box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24),0 17px 50px 0 rgba(0,0,0,0.19);
+  box-shadow: 0 12px 16px 0 rgba(0, 0, 0, 0.24),
+    0 17px 50px 0 rgba(0, 0, 0, 0.19);
 }
 .project02-link a {
   text-decoration: none;
   font-size: 15px;
   color: white;
 }
-
 
 /* projecr03 */
 
@@ -194,11 +197,12 @@ background-image: url("https://www.transparenttextures.com/patterns/asfalt-dark.
   border: none;
   cursor: pointer;
   -webkit-transition-duration: 0.4s; /* Safari */
-    transition-duration: 0.4s;
-    margin-left: 570px;
+  transition-duration: 0.4s;
+  margin-left: 570px;
 }
 .project03-link:hover {
-  box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24),0 17px 50px 0 rgba(0,0,0,0.19);
+  box-shadow: 0 12px 16px 0 rgba(0, 0, 0, 0.24),
+    0 17px 50px 0 rgba(0, 0, 0, 0.19);
 }
 .project03-link a {
   text-decoration: none;
