--- a/assets/css/media.css
+++ b/assets/css/media.css
@@ -2,6 +2,8 @@
     .navbar {
         flex-direction: column;
         text-align: center;
+        position: sticky;
+        top: 0;
     }
     .navbar-logo {
         padding: 18 0 0;
@@ -19,6 +21,61 @@
     }
     .home {
         width: 100%;
+        height: 500px;
     }
-    
+    .home-text h1 {
+        margin-top: 40px;
+        margin-left: 40px;
+        font-size: 10px;
+        width: 60px;
+    }
+    .home-text h3 {
+        margin-top:10px;
+        margin-left: 40px;
+        font-size: 13px;
+    }
+    .home-text p {
+        margin-left: 40px;
+        margin-top: 5px;
+        font-size: 25px;
+      }
+      .home-text ul {
+        margin-left: 40px;
+      }
+      .home-text ul li {
+        margin-top: 10px;
+        font-size: 13px;
+      }
+      .home-social {
+        width: 200px;
+        height: 50px;
+        margin-top: 10px;
+        margin-left: 28px;
+        border-radius: 4px;
+        padding: 5px;
+        position: relative;
+      }
+      .home-social i {
+          width: 15px;
+          height: 15px;
+          margin-left: 5px;
+      }
+      i.material-icons {
+        font-size: 0.5rem;
+        color: white;
+        position: relative;
+        border-radius: 50%;
+        transition: color 0.2s ease, background-color 0.2s ease, transform 0.3s ease;
+      }
+      .home-social i:hover {
+        color: red;
+      }
+      .home-image img {
+        width: 150px;
+        height: 150px;
+        border: rgb(109, 109, 109) outset 15px;
+        border-radius: 50%;
+        margin-top: 80px;
+        margin-left: 10px;
+      }
 }
