styling the media query for the what I do section

--- a/assets/css/media.css
+++ b/assets/css/media.css
@@ -131,5 +131,39 @@
         box-shadow: 0 10px 6px -6px #777;
         transition: 0.3s;
       }
-      
+      .do {
+          width: 100%;
+          height: 820px;
+      }
+      .do-card {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+      }
+      .do h1 {
+        text-align: center;
+        font-family: Amaranth-Bold;
+        font-size: 22px;
+      }
+      .do-card .card {
+        width: 250px;
+        height: 220px;
+        margin-left: 25px;
+        background-color: white;
+      }
+      .do-card .card h1 {
+        font-family: Amaranth-Bold;
+        margin-top: 30px;
+      }
+      .do-card .card p {
+        width: 200px;
+        font-size: 10px;
+        margin: 0 auto;
+        text-align: center;
+        margin-top: 15px;
+        font-family: PollyRounded-Light;
+        line-height: 1.6;
+      }
+
 }
