--- a/assets/css/media.css
+++ b/assets/css/media.css
@@ -1,4 +1,4 @@
-@media all and (max-width:600px) {
+@media only screen and (max-width:620px) {
     .navbar {
         flex-direction: column;
         text-align: center;
